feat: add delte confirm message